Convert to coroutines and add Shops and Characters.

--- a/TownWebsite.html
+++ b/TownWebsite.html
@@ -99,7 +99,7 @@
                     <p id="customDemographics" style="display:none;">
                         Instructions: Race## to customize race demographics. For example: "Human50 Elf50" will give 50%
                         Humans and 50% Elves. "Gnome25 Dwarf25 Halfling25 Half-Elf25" will give 25% of each.
-                        <input type="text" placeholder="Custom String" name="customDemographics" value="" />
+                        <input type="text" placeholder="Custom extensions.String" name="customDemographics" value="" />
                     </p>
 
                     Use Seed: <input type="checkbox" name="townUseSeed" /> Seed: <input type="text" name="townSeed"
@@ -448,8 +448,8 @@
                     <div class="sprite sprite-mobile"></div>
                 </a></div>
             <a id="mainMenuToggleBtn"
-                style="position:fixed;top:30px;left:0;font-size:20px;z-index:9999;background:#E4DDC4;line-height:19px;"
-                class="ph" href="/" onclick="return ! hidNav(this,['[+]','[-]'])">[-]</a>
+               style="position:fixed;top:30px;left:0;font-size:20px;z-index:9999;background:#E4DDC4;line-height:19px;"
+               class="ph" href="/" onclick="return ! hidNav(this,['[+]','[-]'])">[-]</a>
 
 
             <a id="LD1" class="ph noprint" href="/login/"
