Implement Town and Service serialization.
Linking characters makes problem because names are inconsistent.

--- a/TownWebsite.html
+++ b/TownWebsite.html
@@ -15,7 +15,7 @@
 
 
 
-    <title>Town Generator - Kassoon.com</title>
+    <title>models.Town Generator - Kassoon.com</title>
     <meta name="description"
         content="Randomly generates medieval cities and towns with demographics, detailed shops, and NPC patrons." />
     <meta name="keywords" content="D&amp;D, dnd, medieval, fantasy, town, city, generator, creator, shops, npcs" />
@@ -74,7 +74,7 @@
         <div id="layout">
 
             <div id="content">
-                <h1>Random Town Generator</h1>
+                <h1>Random models.Town Generator</h1>
                 <p>Randomly generates towns, shops, NPCs</p>
                 <p>
                 <form action="/dnd/town-generator/" method="post">
@@ -82,7 +82,7 @@
                         <option value="0">Any Size</option>
                         <option value="1">Hamlet</option>
                         <option value="2">Village</option>
-                        <option value="3">Town</option>
+                        <option value="3">models.Town</option>
                         <option value="4">City</option>
                         <option value="5">Capital</option>
                     </select>
@@ -109,7 +109,7 @@
                 </form>
                 </p>
 
-                <h2>Hanrane, Town <a class="npcPerma" href="/dnd/town-generator/30/693024/">[Permalink]</a></h2>
+                <h2>Hanrane, models.Town <a class="npcPerma" href="/dnd/town-generator/30/693024/">[Permalink]</a></h2>
                 <form method="get" style="float:right;clear:both;"
                     action="/dnd/saved-generators/L2RuZC90b3duLWdlbmVyYXRvci8zMC82OTMwMjQv/" target="_blank"><input
                         type="submit" value="Save" /></form>
@@ -131,7 +131,7 @@
                 </p>
                 <p id="townDesc">
                     Hanrane is built upon an isolated peak that can only be accessed by a bridge, and is known for its
-                    mines and industry. Town is ruled by a priest of the local religion (<a target="_blank"
+                    mines and industry. models.Town is ruled by a priest of the local religion (<a target="_blank"
                         href="/?page=dnd&subpage=npc-generator&reqRace=7&useSeed=on&seed=402016">Dondon Silvereyes, Male
                         Halfling</a>). The races live together mostly in harmony.</p>
                 <p>Defenses: The town is surrounded by rammed-earth walls. 14 trained warriors serve in the town's
@@ -380,7 +380,7 @@
                 <!--br/>
 
 <p id="related" style="width:100%;max-width:100%;clear:both;">
-<a href="/dnd/town-generator/"><img title="Generate towns with demographics, detailed shops, and NPC patrons" class="related" src="/site/images/dnd/town-generator-thumb.png" alt="Town Generator"/></a>
+<a href="/dnd/town-generator/"><img title="Generate towns with demographics, detailed shops, and NPC patrons" class="related" src="/site/images/dnd/town-generator-thumb.png" alt="models.Town Generator"/></a>
 <a href="/dnd/combat-tracker/"><img title="A tool for keeping track of characters in a combat encounter" class="related" src="/site/images/dnd/combat-tracker-thumb.png" alt="D&amp;D Combat Tracker"/></a>
 <a href="/dnd/cheap-miniatures/"><img title="Create 100 PC and NPC miniatures for around $15" class="related" src="/site/images/dnd/cheap-minis-thumb.png" alt="D&amp;D Cheap Miniatures"/></a>
 <a href="/dnd/encounter-builder/"><img title="A tool for creating level-appropriate combat encounters" class="related" src="/site/images/dnd/encounter-builder-thumb.png" alt="D&amp;D Encounter Builder"/></a>
@@ -589,13 +589,13 @@
                                         <li>Cheat Sheet</li>
                                     </a>
                                     <a href="/dnd/5e/character-sheet/">
-                                        <li>Character Sheet</li>
+                                        <li>models.Character Sheet</li>
                                     </a>
                                     <a href="/dnd/5e/premade-characters/">
                                         <li>Characters (Premade)</li>
                                     </a>
                                     <a href="/dnd/5e/character-builds/">
-                                        <li>Character Guides</li>
+                                        <li>models.Character Guides</li>
                                     </a>
                                     <a href="/dnd/5e/chase-tool">
                                         <li>Chase Tool</li>
@@ -992,7 +992,7 @@
                             <li onclick="tD(this.nextSibling.nextSibling,'block')">Pathfinder</li>
                             <ul class="sec">
                                 <a href="/dnd/pf2e/character-sheet/">
-                                    <li>2e Character Sheet</li>
+                                    <li>2e models.Character Sheet</li>
                                 </a>
                             </ul>
 
@@ -1119,7 +1119,7 @@
                     </div><br />
                     <ul>
                         <li><a href='/dnd/5e/proficiency/'>D&amp;D Proficiency </a> (2021-07-11)</li>
-                        <li><a href='/dnd/town-generator/'>Town Generator </a> (2021-07-09)</li>
+                        <li><a href='/dnd/town-generator/'>models.Town Generator </a> (2021-07-09)</li>
                         <li><a href='/dnd/map/'>Grid Map </a> (2021-07-07)</li>
                         <li><a href='/dnd/grid-map-update-four/'>Big Grid Map Update #4 </a> (2021-07-07)</li>
                         <li><a href='/dnd/random-plot-hooks-generator/'>Random Plot Hooks Generator </a> (2021-07-03)
