--- a/TownWebsiteContent.html
+++ b/TownWebsiteContent.html
@@ -1,13 +1,13 @@
 source text is
 
-<h1>Random Town Generator</h1>
+<h1>Random models.Town Generator</h1>
 <p>Randomly generates towns, shops, NPCs</p>
 <p></p><form action="/dnd/town-generator/" method="post">
     <select name="townSize" onchange="this.form.submit()">
         <option value="0">Any Size</option>
         <option value="1" selected="">Hamlet</option>
         <option value="2">Village</option>
-        <option value="3">Town</option>
+        <option value="3">models.Town</option>
         <option value="4">City</option>
         <option value="5">Capital</option>
     </select>
@@ -186,7 +186,7 @@ source text is
 <!--br/>
 
 <p id="related" style="width:100%;max-width:100%;clear:both;">
-<a href="/dnd/town-generator/"><img title="Generate towns with demographics, detailed shops, and NPC patrons" class="related" src="/site/images/dnd/town-generator-thumb.png" alt="Town Generator"/></a>
+<a href="/dnd/town-generator/"><img title="Generate towns with demographics, detailed shops, and NPC patrons" class="related" src="/site/images/dnd/town-generator-thumb.png" alt="models.Town Generator"/></a>
 <a href="/dnd/combat-tracker/"><img title="A tool for keeping track of characters in a combat encounter" class="related" src="/site/images/dnd/combat-tracker-thumb.png" alt="D&amp;D Combat Tracker"/></a>
 <a href="/dnd/cheap-miniatures/"><img title="Create 100 PC and NPC miniatures for around $15" class="related" src="/site/images/dnd/cheap-minis-thumb.png" alt="D&amp;D Cheap Miniatures"/></a>
 <a href="/dnd/encounter-builder/"><img title="A tool for creating level-appropriate combat encounters" class="related" src="/site/images/dnd/encounter-builder-thumb.png" alt="D&amp;D Encounter Builder"/></a>
