Add more helpful error logger.
Also fix bug with cancelled coroutine scope. Nice to see that it works.

--- a/CharacterWebsite.html
+++ b/CharacterWebsite.html
@@ -346,7 +346,7 @@ function dragElement(elmnt)
 </script><!--br/>
 
 <p id="related" style="width:100%;max-width:100%;clear:both;">
-<a href="/dnd/town-generator/"><img title="Generate towns with demographics, detailed shops, and NPC patrons" class="related" src="/site/images/dnd/town-generator-thumb.png" alt="models.Town Generator"/></a>
+<a href="/dnd/town-generator/"><img title="Generate towns with demographics, detailed shops, and NPC patrons" class="related" src="/site/images/dnd/town-generator-thumb.png" alt="Town Generator"/></a>
 <a href="/dnd/combat-tracker/"><img title="A tool for keeping track of characters in a combat encounter" class="related" src="/site/images/dnd/combat-tracker-thumb.png" alt="D&amp;D Combat Tracker"/></a>
 <a href="/dnd/cheap-miniatures/"><img title="Create 100 PC and NPC miniatures for around $15" class="related" src="/site/images/dnd/cheap-minis-thumb.png" alt="D&amp;D Cheap Miniatures"/></a>
 <a href="/dnd/encounter-builder/"><img title="A tool for creating level-appropriate combat encounters" class="related" src="/site/images/dnd/encounter-builder-thumb.png" alt="D&amp;D Encounter Builder"/></a>
@@ -471,9 +471,9 @@ Make campaigns and save <a href="/dnd/encounter-builder/">encounters</a> / <a hr
                     <ul  class="ter">
 			                  <a href="/dnd/5e/armor/"><li>Armor</li></a>
                         <a href="/dnd/5e/crib-sheet/"><li>Cheat Sheet</li></a>
-                        <a href="/dnd/5e/character-sheet/"><li>models.Character Sheet</li></a>
+                        <a href="/dnd/5e/character-sheet/"><li>Character Sheet</li></a>
                         <a href="/dnd/5e/premade-characters/"><li>Characters (Premade)</li></a>
-                        <a href="/dnd/5e/character-builds/"><li>models.Character Guides</li></a>
+                        <a href="/dnd/5e/character-builds/"><li>Character Guides</li></a>
                         <a href="/dnd/5e/chase-tool"><li>Chase Tool</li></a>
                         <a href="/dnd/5e/class/"><li>Class Creator</li></a>
                         <a href="/dnd/5e/class-list/"><li>Class List</li></a>
@@ -631,7 +631,7 @@ Make campaigns and save <a href="/dnd/encounter-builder/">encounters</a> / <a hr
 
                 <li onclick="tD(this.nextSibling.nextSibling,'block')">Pathfinder</li>
     			<ul  class="sec">
-    				 <a href="/dnd/pf2e/character-sheet/"><li>2e models.Character Sheet</li></a>
+    				 <a href="/dnd/pf2e/character-sheet/"><li>2e Character Sheet</li></a>
     			</ul>
 
     			<li onclick="tD(this.nextSibling.nextSibling,'block')"><a href="/lists/">Neat</a></li>
@@ -704,7 +704,7 @@ Make campaigns and save <a href="/dnd/encounter-builder/">encounters</a> / <a hr
                 <a style="text-decoration:none;display:block;float:right;" href="/site/rss.xml"><div class="sprite sprite-rss"></div></a>
             </div>
         </div><br/>
-        <ul><li><a href='/dnd/house-map-generator/'>House Map Generator </a> (2021-07-16)</li><li><a href='/dnd/session-start-generator/'>Session Start Generator </a> (2021-07-14)</li><li><a href='/dnd/make-a-session/'>Make A Session </a> (2021-07-14)</li><li><a href='/dnd/'>D&amp;D </a> (2021-07-14)</li><li><a href='/dnd/5e/proficiency/'>D&amp;D Proficiency </a> (2021-07-11)</li><li><a href='/dnd/town-generator/'>models.Town Generator </a> (2021-07-09)</li><li><a href='/dnd/map/'>Grid Map </a> (2021-07-07)</li><li><a href='/dnd/grid-map-update-four/'>Big Grid Map Update #4 </a> (2021-07-07)</li></ul>        <a style="float:right;" href="/sitemap/">Sitemap</a>
+        <ul><li><a href='/dnd/house-map-generator/'>House Map Generator </a> (2021-07-16)</li><li><a href='/dnd/session-start-generator/'>Session Start Generator </a> (2021-07-14)</li><li><a href='/dnd/make-a-session/'>Make A Session </a> (2021-07-14)</li><li><a href='/dnd/'>D&amp;D </a> (2021-07-14)</li><li><a href='/dnd/5e/proficiency/'>D&amp;D Proficiency </a> (2021-07-11)</li><li><a href='/dnd/town-generator/'>Town Generator </a> (2021-07-09)</li><li><a href='/dnd/map/'>Grid Map </a> (2021-07-07)</li><li><a href='/dnd/grid-map-update-four/'>Big Grid Map Update #4 </a> (2021-07-07)</li></ul>        <a style="float:right;" href="/sitemap/">Sitemap</a>
         <a href="/news/">Archive</a>
         <a style="clear: both;float:right;" href="/terms-conditions-privacy/">Privacy</a>
     </div>
